Bug 1997108 - Ensure inactive split view tab labels are visible in HCM r=tabbrowser-reviewers,ayeddi,accessibility-frontend-reviewers,sthompson
Differential Revision: https://phabricator.services.mozilla.com/D277911

UltraBlame original commit: ef1ffe5ccf24c4ecb2e3256d14a9e1535b2573df

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -1331,7 +1331,7 @@ tab-group > tab-split-view-wrapper {
 
     @media (forced-colors) {
       border: 1px solid SelectedItem;
-      background: ButtonFace;
+      background: SelectedItemText;
     }
   }
 
@@ -1345,6 +1345,12 @@ tab-group > tab-split-view-wrapper {
 
     .tab-content {
       padding-inline: var(--space-medium);
+
+      @media (forced-colors) {
+        #tabbrowser-tabs tab-split-view-wrapper[hasactivetab] .tabbrowser-tab:not([selected]) & {
+          color: SelectedItem;
+        }
+      }
     }
 
     &:first-child {
